--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -329,3 +329,19 @@ window#waybar.hidden {
   color: #92a2d5;
   background: transparent;
 }
+
+#disk {
+  margin: 6px 6px 6px 6px;
+  margin-top: 6px;
+  margin-left: 8px;
+  margin-right: 0px;
+  margin-bottom: 6px;
+  padding-left: 10px;
+  padding-right: 10px;
+  border-radius: 18px;
+  /* font-size: 14px; */
+  font-weight: bold;
+  transition: none;
+  color: @bg;
+  background: @fg;
+}
