--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -29,7 +29,8 @@ tooltip label {
 /* window colors */
 
 window#waybar {
-  background: alpha(@bg2, 0.09);
+  /* background: alpha(@bg2, 0.09); */
+  background: alpha(@bg2, 0);
   border-radius: 19px;
   margin-top: 6px;
 }
