--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -268,6 +268,15 @@ tooltip label {
   color: @hover-fg;
 }
 
+#language {
+  background: @tray;
+  color: @module-fg;
+  padding: 0 8px 0 5px;
+}
+
+#language:hover {
+  color: @hover-fg;
+}
 /* ────────────────────────────────────────────────────────────┤ bluetooth ├───
 */
 #bluetooth {
@@ -397,7 +406,7 @@ tooltip label {
 
 * {
   font-family: "JetBrainsMono Nerd Font";
-  font-size: 14px;
+  font-size: 14.9px;
   font-weight: bold;
 }
 
@@ -422,7 +431,7 @@ tooltip label,
 #custom-right3,
 #custom-right4,
 #custom-right5 {
-  font-size: 14.68px;
+  font-size: 18px;
 }
 
 /* ─────────────────────────────────────────────────┤ left & right inverse ├───
@@ -430,18 +439,18 @@ tooltip label,
 #custom-leftin1,
 #custom-leftin2,
 #custom-rightin1 {
-  font-size: 15.5px;
+  font-size: 18.1px;
 }
 
 /* ──────────────────────────────────────────────────────────┤ distro icon ├───
 */
 #custom-distro {
-  font-size: 14.6px;
+  font-size: 19.6px;
 }
 
 #custom-left5,
 #custom-right2 {
-  font-size: 15.68px;
+  font-size: 18.1px;
 }
 
 /*
