--- a/.config/waybar/themes/css/gruvbox-material-dark.css
+++ b/.config/waybar/themes/css/gruvbox-material-dark.css
@@ -1,6 +1,6 @@
 /* Gruvbox Material Dark */
 
-@define-color bg0_h           #1b1b1b;
+@define-color bg0_h           #1d2021;
 @define-color bg0             #282828;
 @define-color bg1             #32302f;
 @define-color bg2             #3a3735;
